compiler/testData/diagnostics/tests/duplicateJvmSignature/accidentalOverrides/classFunctionOverriddenByPropertyInConstructor.kt
open class B {
    fun getX() = 1
}

class C(<!ACCIDENTAL_OVERRIDE!>konst x: Int<!>) : B()